force-app/main/default/objects/CodeNAF__c/CodeNAF__c.object-meta.xml
<CustomObject>
    <label>Code NAF</label>
    <nameField>
        <label>NAF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes NAF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>