force-app/main/default/objects/CodeNAF__c/fields/CEE__c.field-meta.xml
<CustomField>
    <fullName>CEE__c</fullName>
    <label>CEE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soumis</fullName>
            </value>
            <value>
                <fullName>Non Soumis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>