force-app/main/default/objects/CodeNAF__c/fields/CSPE__c.field-meta.xml
<CustomField>
    <fullName>CSPE__c</fullName>
    <label>CSPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non éligible taux réduit</fullName>
            </value>
            <value>
                <fullName>Potentiellement éligible taux réduit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>