force-app/main/default/objects/CodeNAF__c/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <label>Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE ET PÊCHE</fullName>
            </value>
            <value>
                <fullName>ACTIVITES DE CONSEIL AUX ENTREPRISES</fullName>
            </value>
            <value>
                <fullName>ACTIVITES DE NETTOYAGE</fullName>
            </value>
            <value>
                <fullName>ACTIVITES DE SECURITE</fullName>
            </value>
            <value>
                <fullName>ACTIVITES JURIDIQUES, COMPTABLES ET DES SIEGES SOCIAUX</fullName>
            </value>
            <value>
                <fullName>ACTIVITES VETERINAIRES TERTIAIRE</fullName>
            </value>
            <value>
                <fullName>ARCHITECTURE, ETUDES ET NORMES</fullName>
            </value>
            <value>
                <fullName>ART ET SPECTACLE</fullName>
            </value>
            <value>
                <fullName>AUTRES ACTIVITES DE SERVICES PERSONNELS</fullName>
            </value>
            <value>
                <fullName>AUTRES INDUSTRIES</fullName>
            </value>
            <value>
                <fullName>BÂTIMENT ET TRAVAUX PUBLICS (BTP) ET IMMOBILIER</fullName>
            </value>
            <value>
                <fullName>Bien-être</fullName>
            </value>
            <value>
                <fullName>COMMERCE ET DISTRIBUTION</fullName>
            </value>
            <value>
                <fullName>COMMUNICATION, MARKETING ET MEDIAS</fullName>
            </value>
            <value>
                <fullName>ENERGIE</fullName>
            </value>
            <value>
                <fullName>ENSEIGNEMENT ET FORMATION</fullName>
            </value>
            <value>
                <fullName>FINANCE, BANQUE ET ASSURANCE</fullName>
            </value>
            <value>
                <fullName>Hebergement Social</fullName>
            </value>
            <value>
                <fullName>HÔTELLERIE ET RESTAURATION</fullName>
            </value>
            <value>
                <fullName>IMMOBILIER</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE ALIMENTAIRE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE ALIMENTAIRE ANIMAUX</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE CHIMIE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE DE L&apos;AMEUBLEMENT</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE DE L&apos;OPTIQUE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE DU BOIS</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE DU SPORT &amp; LOISIRS</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE DU TEXTILE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE ELECTRONIQUE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE MATERIEL MEDICAL/SANTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>