force-app/main/default/objects/CodeNAF__c/fields/Domaine_activite_ADEME__c.field-meta.xml
<CustomField>
    <fullName>Domaine_activite_ADEME__c</fullName>
    <label>Domaine d&apos;activité ADEME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE</fullName>
            </value>
            <value>
                <fullName>TERTIAIRE</fullName>
            </value>
            <value>
                <fullName>TRANSPORT</fullName>
            </value>
            <value>
                <fullName>RESIDENTIEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>