force-app/main/default/objects/CodeNAF__c/fields/Nom_section__c.field-meta.xml
<CustomField>
    <fullName>Nom_section__c</fullName>
    <label>Nom de section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVITÉS DE SERVICES ADMINISTRATIFS ET DE SOUTIEN</fullName>
            </value>
            <value>
                <fullName>ACTIVITÉS FINANCIÈRES ET D&apos;ASSURANCE</fullName>
            </value>
            <value>
                <fullName>ACTIVITÉS IMMOBILIÈRES</fullName>
            </value>
            <value>
                <fullName>ACTIVITÉS SPÉCIALISÉES, SCIENTIFIQUES ET TECHNIQUES</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATION PUBLIQUE</fullName>
            </value>
            <value>
                <fullName>AGRICULTURE, SYLVICULTURE ET PÊCHE</fullName>
            </value>
            <value>
                <fullName>ARTS, SPECTACLES ET ACTIVITÉS RÉCRÉATIVES</fullName>
            </value>
            <value>
                <fullName>AUTRES ACTIVITÉS DE SERVICES</fullName>
            </value>
            <value>
                <fullName>COMMERCE ; RÉPARATION D&apos;AUTOMOBILES ET DE MOTOCYCLES</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>ENSEIGNEMENT</fullName>
            </value>
            <value>
                <fullName>HÉBERGEMENT ET RESTAURATION</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE MANUFACTURIÈRE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIES EXTRACTIVES</fullName>
            </value>
            <value>
                <fullName>INFORMATION ET COMMUNICATION</fullName>
            </value>
            <value>
                <fullName>PRODUCTION ET DISTRIBUTION D&apos;EAU ; ASSAINISSEMENT, GESTION DES DÉCHETS ET DÉPOLLUTION</fullName>
            </value>
            <value>
                <fullName>PRODUCTION ET DISTRIBUTION D&apos;ÉLECTRICITÉ, DE GAZ, DE VAPEUR ET D&apos;AIR CONDITIONNÉ</fullName>
            </value>
            <value>
                <fullName>SANTÉ HUMAINE ET ACTION SOCIALE</fullName>
            </value>
            <value>
                <fullName>TRANSPORTS ET ENTREPOSAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>